--- a/lesson_3/requirements.txt
+++ b/lesson_3/requirements.txt
@@ -1,36 +1,62 @@
+absl-py==2.1.0
+annotated-types==0.7.0
 anyio==4.6.2.post1
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
+astunparse==1.6.3
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
+boto3==1.35.90
+botocore==1.35.90
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
 debugpy==1.8.8
 decorator==5.1.1
 defusedxml==0.7.1
+dnspython==2.7.0
+email_validator==2.2.0
 executing==2.1.0
+fastapi==0.115.6
+fastapi-cli==0.0.7
 fastjsonschema==2.20.0
+filelock==3.16.1
+filetype==1.2.0
+fire==0.7.0
+flatbuffers==24.3.25
 fonttools==4.55.0
 fqdn==1.5.1
+fsspec==2024.12.0
+gast==0.6.0
+gensim==4.3.3
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+graphviz==0.20.3
+grpcio==1.68.1
 h11==0.14.0
+h5py==3.12.1
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.27.2
-idna==3.10
+huggingface-hub==0.24.7
+idna==3.7
 ipykernel==6.29.5
 ipython==8.29.0
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.4
+jmespath==1.0.1
 joblib==1.4.2
 json5==0.9.28
 jsonpointer==3.0.0
@@ -45,17 +71,31 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.1
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+keras==3.7.0
 kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
 notebook_shim==0.2.4
-numpy==2.1.3
+numpy==1.26.4
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+opt_einsum==3.4.0
+optree==0.13.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -66,41 +106,85 @@ pillow==11.0.0
 platformdirs==4.3.6
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
+protobuf==4.25.5
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pybboxes==0.1.6
 pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+pydot==3.0.3
+pydotplus==2.0.2
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
+python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.9.4
+rich-toolkit==0.12.0
+roboflow==1.1.50
 rpds-py==0.21.0
+s3transfer==0.10.4
+sahi==0.11.20
 scikit-learn==1.5.2
-scipy==1.14.1
+scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==75.5.0
+shapely==2.0.6
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.1.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+starlette==0.41.3
+summarytools==0.3.0
+sympy==1.13.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.2
+termcolor==2.5.0
 terminado==0.18.1
+terminaltables==3.1.10
+thop==0.1.1.post2209072238
 threadpoolctl==3.5.0
 tinycss2==1.4.0
+torch==2.2.2
+torchvision==0.17.2
 tornado==6.4.1
+tqdm==4.67.1
 traitlets==5.14.3
+typer==0.15.1
 types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
 tzdata==2024.2
+ultralytics==8.3.55
+ultralytics-thop==2.0.13
 uri-template==1.3.0
 urllib3==2.2.3
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.3
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==14.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.0
+yolov5==7.0.14
